[fix] scrolling of contacts container so that it doesn't overflow

--- a/src/main/resources/static/style/chat.css
+++ b/src/main/resources/static/style/chat.css
@@ -32,7 +32,8 @@ body {
     background-color: var(--SecondBackground);
     width: 100%;
     height: 100%;
-
+    display: flex;
+    flex-direction: column;
 }
 
 #chat-container {
@@ -93,8 +94,9 @@ body {
 
 #contacts-container {
     width: 100%;
-    overflow-y: auto;
-
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 #contacts {
@@ -273,4 +275,10 @@ body {
 
 .contact-message time {
     text-align: right;
+}
+
+#contacts {
+    height: 1px;
+    flex-grow: 1;
+    overflow-y: auto;
 }
